tests/ui/feature-gates/feature-gate-eii-internals.stderr
error[E0658]: use of unstable library feature `eii_internals`
  --> $DIR/feature-gate-eii-internals.rs:5:3
   |
LL | #[eii_macro_for(bar)]
   |   ^^^^^^^^^^^^^
   |
   = help: add `#![feature(eii_internals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
